Add: feature change password in module users
